Update dashboard layout

--- a/templates/Parts/_dashboard_layout.html.twig
+++ b/templates/Parts/_dashboard_layout.html.twig
@@ -90,7 +90,7 @@
                     </li>
                     <hr class="my-2">
                     <li>
-                        <a href="javascript:void()" aria-expanded="false">
+                        <a href="{{ path('app_trick_add') }}" aria-expanded="false">
                             <i class="icon-note menu-icon"></i><span class="nav-text">Ajouter un Trick</span>
                         </a>
                     </li>
