--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -27,3 +27,15 @@ p#counterBlock {
     font-weight: bold;
     margin-top:7px
 }
+
+/******************************************
+***************Home Page*******************
+*******************************************/
+
+#trick-lead {
+    height: 1000px; 
+    background-image: url('../public/img/snowtrick-background.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover
+}
